--- a/journal/202111.md
+++ b/journal/202111.md
@@ -4,15 +4,11 @@
 
 _Image: Remote Node Outpost II by @saender_
 
-November's highlights: {
+November's highlights:
 
 - A huge proposal to change the distribution of Decred block rewards so that PoW miners get a much smaller share was published, discussed and has now been approved.
-- Politeia v1.3.0 is live in the wild, bringing improvements to the handling of proposal status and pre-release testing.
-- Two new reusable packages have been developed in dcrd, one general purpose for working with big integers, and one for building Decred apps
-- First official releases of dcrros (Decred Rosetta implementation) v0.1.0 and v0.1.1 have been tagged {not sure of significance of this}
-- other ideas?
-
-}
+- Politeia v1.3.0 is live in the wild, bringing improvements to the handling of proposal status, GUI improvements, and end-to-end testing.
+- Two new reusable packages have been developed in dcrd, one general purpose for working with big integers, and one for building Decred apps.
 
 Contents:
 
@@ -104,8 +100,6 @@ Changes in the pi-ui library (shared by Decrediton and Politeia):
 - updates to match new design specs
 - ~3 bug fixes
 
-{ image candidates: 3594 }
-
 <a id="politeia" />
 
 **[Politeia](https://github.com/decred/politeia)**
@@ -121,8 +115,6 @@ New [Politeia](https://proposals.decred.org/) release is live! Highlights of v1.
 - parallel trickling in politeiavoter for better privacy and reliability
 - new end-to-end testing infrastructure
 - codebase preparations for the user layer rewrite
-
-{ ^ maybe remove the list and defer to the release notes since Pi section is pretty long already - nice problem to have }
 
 For more details check the release notes in [politeia](https://github.com/decred/politeia/releases/tag/v1.3.0) and [politeiagui](https://github.com/decred/politeiagui/releases/tag/v1.3.0) repositories, or the quick Twitter [walkthrough](https://twitter.com/lukebp/status/1462881215346880524) by @lukebp.
 
@@ -154,8 +146,6 @@ Backend changes:
 - corrected [default values](https://github.com/decred/politeia/pull/1568) in the config file and updated the sample config
 
 A notable feature of Politeia development is a formal pre-release step to test all changes in both the [backend](https://github.com/decred/politeia/issues/1573) and the [GUI](https://github.com/decred/politeiagui/issues/2653).
-
-{ image candidates: not seeing any this time }
 
 <a id="vspd" />
 
@@ -243,16 +233,12 @@ _Pay reg fees in other coins to save more DCR_
 - updated [French](https://github.com/planetdecred/dcrandroid/pull/586) translation
 - fixed [links](https://github.com/planetdecred/dcrandroid/pull/599) to proposals website
 
-{ image candidates: skipping for low activity, but just in case: 604 }
-
 <a id="dcrios" />
 
 **[Decred Wallet (iOS)](https://github.com/planetdecred/dcrios)**
 
 - fixed icons of [active tabs](https://github.com/planetdecred/dcrios/pull/874)
 - fixed dropdown [closing](https://github.com/planetdecred/dcrios/pull/872) when tapping outside
-
-{ image candidates: skipping for low activity, but just in case: 874 }
 
 <a id="godcr" />
 
@@ -272,8 +258,6 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (
 - added [`dexdcr`](https://github.com/planetdecred/dcrlibwallet/pull/210) package to allow client apps to integrate DCRDEX
 
 > Hello, after careful consideration the Planet Decred team has determined that we are going to delay the GoDCR proposal v2 until we have a mainnet release. Because of this, please look for the v2 GoDCR proposal to post sometime in January. 1.0 mainnet GoDCR should be finished by the end of the year. (@monsa00 on [2021-12-02](https://matrix.to/#/!gruHpujXftcsHcghjx:planetdecred.org/$GJ7PliGPTamNznbE7D82QfK05Hm6wQpogg8x2aQkCmw))
-
-{ image candidates: 685 701 - if you have better images please share }
 
 <a id="dcrros" />
 
@@ -381,7 +365,7 @@ F2Pool [announced](https://f2pool.io/mining/updates/#20211015) it will shutdown 
 
 Ledger Live users have reported problems with sending DCR from this wallet. Due to incorrect fee calculation, the transactions would get stuck in the mempool and lock coins. A workaround was [found](https://www.reddit.com/r/decred/comments/qoe0hu/ledger_live_sending_issues_and_workarounds/) where coin control feature could be used to unlock the funds.
 
-Someone has [reported](https://www.reddit.com/r/decred/comments/qru7vx/decred_is_the_majority_place_holder_of_the/) that DCR became the major placeholder (27%) in the PRIV index at FTX, which tracks 9 privacy coins, although this appears to be an error of rebalancing and the [weight](https://help.ftx.com/hc/en-us/articles/360027668812-Index-Calculation) of DCR is supposed to be lower. { really? }
+Someone has [reported](https://www.reddit.com/r/decred/comments/qru7vx/decred_is_the_majority_place_holder_of_the/) that DCR became the major placeholder (27%) in the PRIV index at FTX, which tracks 9 privacy coins, although this appears to be an error of rebalancing and the [weight](https://help.ftx.com/hc/en-us/articles/360027668812-Index-Calculation) of DCR is supposed to be lower.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -479,7 +463,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing and editing: { bee, bochinchero, degeri, l1ndseymm, richardred }
+- writing and editing: bee, bochinchero, degeri, l1ndseymm, richardred
 - reviews and feedback: davecgh, lukebp
 - title image: saender
 - funding: Decred stakeholders
