--- a/journal/202111.md
+++ b/journal/202111.md
@@ -7,8 +7,9 @@ _Image: Remote Node Outpost II by @saender_
 November's highlights:
 
 - A huge proposal to change the distribution of Decred block rewards so that PoW miners get a much smaller share was published, discussed and has now been approved.
+- The community has funded an outreach proposal after it was rejected by a Politeia vote.
 - Politeia v1.3.0 is live in the wild, bringing improvements to the handling of proposal status, GUI improvements, and end-to-end testing.
-- Two new reusable packages have been developed in dcrd, one general purpose for working with big integers, and one for building Decred apps.
+- Two new reusable packages have been developed in dcrd, a general purpose one for fast big integers, and one for building Decred apps.
 
 Contents:
 
