--- a/journal/202111.md
+++ b/journal/202111.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – November 2021
+# Decred Journal – November 2021
 
 ![abstract art by @saender](../img/202111.1.github.png)
 
@@ -310,7 +310,7 @@ Community stats as of Dec 1:
 
 In November the new [treasury](https://dcrdata.decred.org/treasury) received 10,206 DCR worth $1.1 million at the month's average rate of $108.13. 1,995 DCR was spent to pay contractors, consisting of 974 DCR for September and 1,021 DCR for October. The latter is worth $110K at November's rate, or $124K at October's billing rate of $121.57. As of Dec 6, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 743,661 DCR (73 million USD at $98.01).
 
-Two new proposals were submitted this month: 
+Two new proposals were submitted this month:
 
 - A [proposal](https://proposals.decred.org/record/427e1d4) to change the subsidy (block reward) split from the current setting (60/30 PoW/PoS) to favor PoS (10/80) was submitted by @jy-p. The proposal passed in early December with approval of 92% and turnout of 78%, the work is expected to be complete within a few weeks at a cost of no more than $30,000, and the change would take effect once it is introduced and voted on via a consensus change proposal. The proposal ended up collecting 166 comments on Politeia (new record) and 60+ on [Reddit](https://www.reddit.com/r/decred/comments/r3jq5a/change_powpos_subsidy_split_from_6030_to_1080/).
 
