--- a/journal/202111.md
+++ b/journal/202111.md
@@ -362,7 +362,7 @@ _StakeShuffled DCR_
 
 Chinese mining pools have experienced disruption as a result of Internet [censorship](https://www.theblockcrypto.com/post/125533/china-crypto-censorship-media-mining-pools) and [DNS issues](https://www.techspot.com/news/92397-major-mining-pools-facing-connectivity-issues-amid-chinese.html), and some have launched [alternative](https://twitter.com/ViaBTC/status/1465221867631886337) domains in response. This seems to have caused some redistribution of the Decred hashrate, while the total hashrate has not been affected much.
 
-F2Pool [announced](https://f2pool.io/mining/updates/#20211015) will shut down operations in mainland China by the end of 2021. This was followed by the closure of mining pools for several coins including XMR, although the DCR pool has been [online](https://www.f2pool.com/) with 46 Ph/s as of Dec 1.
+F2Pool [announced](https://f2pool.io/mining/updates/#20211015) that it will shut down operations in mainland China by the end of 2021. This was followed by the closure of mining pools for several coins including XMR, although the DCR pool has been [online](https://www.f2pool.com/) with 46 Ph/s as of Dec 1.
 
 Ledger Live users have reported problems with sending DCR from this wallet. Due to incorrect fee calculation, the transactions would get stuck in the mempool and lock coins. A workaround was [found](https://www.reddit.com/r/decred/comments/qoe0hu/ledger_live_sending_issues_and_workarounds/) where coin control feature could be used to unlock the funds.
 
