--- a/journal/202111.md
+++ b/journal/202111.md
@@ -366,7 +366,7 @@ F2Pool [announced](https://f2pool.io/mining/updates/#20211015) that it will shut
 
 Ledger Live users have reported problems with sending DCR from this wallet. Due to incorrect fee calculation, the transactions would get stuck in the mempool and lock coins. A workaround was [found](https://www.reddit.com/r/decred/comments/qoe0hu/ledger_live_sending_issues_and_workarounds/) where coin control feature could be used to unlock the funds.
 
-Someone has [reported](https://www.reddit.com/r/decred/comments/qru7vx/decred_is_the_majority_place_holder_of_the/) that DCR became the major placeholder (27%) in the PRIV index at FTX, which tracks 9 privacy coins, although this appears to be an error of rebalancing and the [weight](https://help.ftx.com/hc/en-us/articles/360027668812-Index-Calculation) of DCR is supposed to be lower.
+Someone has [reported](https://www.reddit.com/r/decred/comments/qru7vx/decred_is_the_majority_place_holder_of_the/) that DCR became the major component (27%) in the PRIV index at FTX, which tracks 9 privacy coins, although this appears to be due to a failure to rebalance what is intended to be a market capitalization weighted index.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -465,6 +465,6 @@ Most information from third parties is relayed directly from the source after a 
 Credits (alphabetical order):
 
 - writing and editing: bee, bochinchero, degeri, l1ndseymm, richardred
-- reviews and feedback: davecgh, lukebp
+- reviews and feedback: davecgh, jz, lukebp
 - title image: saender
 - funding: Decred stakeholders
