fix pipes triggering table rendering

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -400,7 +400,7 @@ Selected articles:
 
 Videos:
 
-- Market update | Decred interview | Moon or bust by Logan Ross of Benzinga ([youtube](https://www.youtube.com/watch?v=0My2w4p2-PE)) - @jy-p talks Decred and answers questions from the chat, starting [29 min](https://www.youtube.com/watch?v=0My2w4p2-PE&t=29m19s)
+- Market update - Decred interview - Moon or bust by Logan Ross of Benzinga ([youtube](https://www.youtube.com/watch?v=0My2w4p2-PE)) - @jy-p talks Decred and answers questions from the chat, starting [29 min](https://www.youtube.com/watch?v=0My2w4p2-PE&t=29m19s)
 
 Audio:
 
