--- a/journal/202112.md
+++ b/journal/202112.md
@@ -4,7 +4,11 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ intro, major news of the month, don't put any links here }
+Highlights for December: {
+
+- DCP10 dev work completed
+
+}
 
 Contents: { sync }
 
@@ -33,7 +37,27 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 _dcrd is a full node implementation that powers Decred's peer-to-peer network around the world._
 
-- {}
+Development work for the upcoming "Change PoW/PoS Subsidy Split To 10/80" consensus change has been completed, including the agenda [definitions](https://github.com/decred/dcrd/pull/2847), the [consensus vote](https://github.com/decred/dcrd/pull/2848) with new consensus rules and tests, and the [DCP-10](https://github.com/decred/dcps/pull/23) document with technical details. A small geek bonus of this change is it will increase the theoretical supply limit from the uncomfortable 20,999,999.99800912 to a more satisfying 21,000,000.00015952 DCR.
+
+The new `primitives` package has been kickstarted with initial [proof-of-work](https://github.com/decred/dcrd/pull/2788) functions, calculations of [merkle tree](https://github.com/decred/dcrd/pull/2826) roots, and functions for generating and verifying [inclusion](https://github.com/decred/dcrd/pull/2827) proofs (along with full tests, benchmarks, and docs). New PoW functions build upon the new optimized `uint256` package and are much faster than the ones in use currently. `primitives` is a large refactoring [plan](https://github.com/decred/dcrd/issues/2786) to collect core consensus code in one place.
+
+Other merged changes:
+
+- introduced [`AssumeValid`](https://github.com/decred/dcrd/pull/2839) parameter and config option to skip certain validation checks for blocks prior to the specified block (which is assumed valid). Compared to using checkpoints for same purpose, `AssumeValid` allows to skip more validation work and gives greater flexibility to node operators and developers (for testing).
+- added an additional child key [derivation](https://github.com/decred/dcrd/pull/2845) method that strictly conforms to the [BIP-32](https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki) standard, to be used by DCRDEX. Decred's current method differs from the standard for legacy reasons.
+- fixed logic for preventing unnecessary [reorgs](https://github.com/decred/dcrd/pull/2840)
+- fixed a bug in CPU [mining](https://github.com/decred/dcrd/pull/2838) (used in simnet testing)
+
+Maintenance, refactoring and cleanup:
+
+- moved the `uint256` package from internal staging area and released it as v1.0.0 of the new [`math/uint256`](https://github.com/decred/dcrd/pull/2842) module. The original plan was to keep it inside the `primitives` module, but this move allows to release it sooner to serve projects outside of Decred. The new location also better reflects that it is a general purpose package, unlike `primitives`, which will be focused on Decred-specific things.
+- initial work to refactor [peer banning](https://github.com/decred/dcrd/pull/2554) and ban score tracking into a `banmanager` package
+- changed RPC server to [submit](https://github.com/decred/dcrd/pull/2835) transactions directly now that piping it through `netsync` is no longer needed
+- updated indexer [error](https://github.com/decred/dcrd/pull/2770) types to leverage Go 1.13 error handling
+- updated module dependencies for the upcoming release
+- created [release-v1.7](https://github.com/decred/dcrd/commits/release-v1.7) branch to build release candidates and releases from
+
+{ sanity check: [#2753](https://github.com/decred/dcrd/pull/2753) would also trigger the hard fork vote for DCP0010 right? }
 
 <a id="dcrwallet" />
 
