--- a/journal/202112.md
+++ b/journal/202112.md
@@ -251,7 +251,11 @@ Community stats as of {date}:
 
 ## Governance
 
-In December the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at month's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at December's rate, or ${} at November's billing rate of ${}. As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
+In December the new [treasury](https://dcrdata.decred.org/treasury) received 10,252 DCR worth $816K at December's average rate of $79.59. 1,006 DCR was spent to pay contractors, worth $80K at December's rate, or $109K at November's billing rate of $108.13. As of Jan 6, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 753,934 DCR (47.8 million USD at $63.37).
+
+The [proposal](https://proposals.decred.org/record/427e1d4) to change the block reward distribution was approved by Politeia vote with 91.7% approval and turnout of 79% - an issue on the final day's voting meant that late votes could not be submitted or counted, but the result was so one-sided this could not have affected the outcome.
+
+A [proposal](https://proposals.decred.org/record/1a290d8) for further funding of the [@StakeShuffle_](https://twitter.com/StakeShuffle_) twitter bot was submitted. The requested sum of $1,684 would cover work done to improve the bot and hosting for 2022.
 
 { check the legacy treasury for any activity }
 
