--- a/journal/202112.md
+++ b/journal/202112.md
@@ -25,6 +25,11 @@ Contents: { sync }
 - [Relevant External](#relevant-external)
 
 
+## v1.7 Release Candidates
+
+{ quick info how to join testing }
+
+
 ## Development
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
@@ -65,7 +70,15 @@ Maintenance, refactoring and cleanup:
 
 _dcrwallet is a wallet server used by command-line and graphical wallet applications._
 
-- {}
+- added an optional parameter to set treasury vote [policy](https://github.com/decred/dcrwallet/pull/2053) specific to a treasury key or a ticket hash (will be used by VSP)
+- upgraded to [`cspp/v2`](https://github.com/decred/dcrwallet/pull/2111) module which includes an additional post-quantum key exchange
+- return more useful info from address validation methods in [gRPC](https://github.com/decred/dcrwallet/pull/2091) and [JSON-RPC](https://github.com/decred/dcrwallet/pull/2096) APIs
+- added gRPC method to [import](https://github.com/decred/dcrwallet/pull/2116) extended public key
+- added gRPC method to import [voting accounts](https://github.com/decred/dcrwallet/pull/1945) derived from a different seed (may be used by staking with Trezor and vspd)
+- added a config option to [limit](https://github.com/decred/dcrwallet/pull/2107) CSPP server connections per change amount
+- migrated to the new [`stdscript`](https://github.com/decred/dcrwallet/pull/2108) package from dcrd
+- fixed possible issues with 1-deep [reorgs](https://github.com/decred/dcrwallet/pull/2110) in SPV mode
+- fixed [`listreceivedbyaccount`](https://github.com/decred/dcrwallet/pull/2119) with imported BIP-44 accounts
 
 <a id="dcrctl" />
 
