--- a/journal/202112.md
+++ b/journal/202112.md
@@ -80,21 +80,27 @@ _dcrwallet is a wallet server used by command-line and graphical wallet applicat
 - fixed possible issues with 1-deep [reorgs](https://github.com/decred/dcrwallet/pull/2110) in SPV mode
 - fixed [`listreceivedbyaccount`](https://github.com/decred/dcrwallet/pull/2119) with imported BIP-44 accounts
 
-<a id="dcrctl" />
-
-**[dcrctl](https://github.com/decred/dcrctl)**
-
-_dcrctl is a command-line client for dcrd and dcrwallet._
-
-- {}
-
 <a id="decrediton" />
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
 _Decrediton is a full-featured desktop wallet app with integrated voting, StakeShuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
-- {}
+User-facing:
+
+- added a [filter](https://github.com/decred/decrediton/pull/3609) by tx id to Transaction History and Ticket History views
+- updated [DCRDEX](https://github.com/decred/decrediton/pull/3608) module to pull in v0.4 features
+- added experimental [SPV support](https://github.com/decred/decrediton/pull/3615) for Decred DCRDEX wallets
+- fixed 3 display issues for [watch-only](https://github.com/decred/decrediton/pull/3607) wallets
+- fixed an issue with upgrading [certificates](https://github.com/decred/decrediton/pull/3616) for some older wallets
+
+Internal:
+
+- reused a few more components from the pi-ui library ([highlighted text](https://github.com/decred/decrediton/pull/3606), [paginator](https://github.com/decred/decrediton/pull/3603), [toggle](https://github.com/decred/decrediton/pull/3604), [buttons](https://github.com/decred/decrediton/pull/3610) and icons)
+- made many productivity enhancements to the [translator](https://github.com/decred/decrediton/pull/3588) tool
+- updated English strings to be [translated](https://github.com/decred/decrediton/pull/3618) and removed old Transifex files
+
+If you would like to add or update a Decrediton translation, please ask in our [#translations](https://chat.decred.org/#/room/#translations:decred.org) chat room.
 
 <a id="politeia" />
 
