--- a/journal/202112.md
+++ b/journal/202112.md
@@ -172,7 +172,35 @@ _cspp is a server for coordinating coin mixes using the CoinShuffle++ protocol. 
 
 _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swaps._
 
-- {}
+First release candidates for the massive upcoming v0.4 release have been tagged. Advanced users can check the [`release-v0.4`](https://github.com/decred/dcrdex/tree/release-v0.4) branch and read the [release notes](https://github.com/decred/dcrdex/blob/release-v0.4/docs/release-notes/release-notes-0.4.0.md) with upgrade instructions.
+
+User-facing changes merged in December:
+
+- fixed [volume](https://github.com/decred/dcrdex/pull/1368) on depth and candlestick charts
+
+Internal changes:
+
+- changed how keys are [derived](https://github.com/decred/dcrdex/pull/1341) from the app seed to use strict BIP-32 (for compatibility with more wallets)
+- added [`assetseed`](https://github.com/decred/dcrdex/pull/1324) command-line app that takes the DEX app seed and derives a wallet seed+password pair for a particular asset. The latter may be usable in some wallet software for accessing funds outside of DEX applications (e.g. btcwallet).
+- migrated to dcrd's new [`stdscript`](https://github.com/decred/dcrdex/pull/1308) package
+- final [dependency](https://github.com/decred/dcrdex/pull/1354) upgrades in preparation for the v0.4 release
+- several fixes have been [backported](https://github.com/decred/dcrdex/pull/1338) to the v0.2 release branch since both v0.3 and v0.4 rely on the unreleased v1.7 of dcrd and dcrwallet
+
+Progress towards Ethereum support { simplify this list a bit }:
+
+- implemented ~ { 1302 1319 1325 1332 1333 1334 1361 1363 } more core [methods](https://github.com/decred/dcrdex/issues/1154) out of a long 27-item checklist. Along the way the codebase is being continuously refactored to support account-based assets like Ethereum (originally DCRDEX was built for UTXO-based coins).
+- added [funding validation](https://github.com/decred/dcrdex/pull/1293) for account-based assets
+- handle different [versions](https://github.com/decred/dcrdex/pull/1339) of the swap contract
+- added failure [reasons](https://github.com/decred/dcrdex/pull/1362) to the swap contract
+- [disallow](https://github.com/decred/dcrdex/pull/1367) Bitcoin Core's new Descriptor Wallets until they support the required key export method
+- added wallet config option for the gas [fee limit](https://github.com/decred/dcrdex/pull/1344)
+- settled on simpler definition of ["coin ID"](https://github.com/decred/dcrdex/pull/1326) for Ethereum
+- simplified reorg [detection](https://github.com/decred/dcrdex/pull/1322)
+- added a script to test [reorgs](https://github.com/decred/dcrdex/pull/1316)
+- fixed client [balance](https://github.com/decred/dcrdex/pull/1321) calculation
+- [keeping up](https://github.com/decred/dcrdex/pull/1309#issuecomment-977380539) with Ethereum's hardforks and toolchain's breaking changes
+
+Check the new development [proposal](https://proposals.decred.org/record/3326c82) for a report of Phase 2 and the roadmap for Phase 3.
 
 <a id="dcrandroid" />
 
