--- a/journal/202112.md
+++ b/journal/202112.md
@@ -6,9 +6,10 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 Highlights for December: {
 
-- v1.7 RC1 in early Jan
+- contractor payments paid via the first treasury spend from the new treasury
 - DCP10 dev work completed
 - Politeia v1.3.1 bugfix and polishing release
+- v1.7 RCs in early Jan
 
 }
 
@@ -29,7 +30,12 @@ Contents: { sync }
 
 ## v1.7 Release Candidates
 
-{ quick info how to join testing }
+{ quick info how to join testing, testnet coins, how to report, etc }
+
+
+## Vote on treasury spends
+
+{ maybe have a standalone and more visible notice to prompt more votes on tspends https://twitterc.com/decredproject/status/1472050886830702597 }
 
 
 ## Development
@@ -242,57 +248,10 @@ _dcrdata is an explorer for Decred blockchain and off-chain data like Politeia p
 - enforce a minimum required [version](https://github.com/decred/dcrdata/pull/1880) of PostgreSQL
 - updated dependencies: [npm](https://github.com/decred/dcrdata/pull/1881), [DCRDEX v0.4](https://github.com/decred/dcrdata/pull/1878), dcrd's [`stdscript`](https://github.com/decred/dcrdata/pull/1879) package
 
-<a id="tinydecred" />
-
-**[TinyDecred](https://github.com/decred/tinydecred)**
-
-_TinyDecred is a toolkit for integrating Decred into Python projects. It includes an experimental light GUI wallet based on PyQt5._
-
-- {}
-
-<a id="dcrros" />
-
-**[dcrros](https://github.com/decred/dcrros)**
-
-_dcrros is a middleware service that provides access to the Decred network via Rosetta API._
-
-- {}
-
-<a id="dcrdocs" />
-
-**[dcrdocs](https://github.com/decred/dcrdocs)**
-
-_dcrdocs is the source code for Decred [user documentation](https://docs.decred.org/)._
-
-- {}
-
-<a id="dcrdevdocs" />
-
-**[dcrdevdocs](https://github.com/decred/dcrdevdocs)**
-
-_dcrdevdocs is the source code for Decred [developer documentation](https://devdocs.decred.org/)._
-
-- {}
-
-<a id="dcrweb" />
-
-**[decred.org](https://github.com/decred/dcrweb)**
-
-_dcrweb is the source code for the decred.org website._
-
-- {}
-
-{ check other repos in:
-
-- https://github.com/decred
-- https://github.com/planetdecred
-- https://github.com/raedahgroup
-
-}
-
 Other:
 
-- { smaller items go here }
+- Bug Bounty program posted a status [update](https://bounty.decred.org/2021/12/status-update/): all-time 209 submissions processed and 19 were eligible for a payout. One minor submission will be revealed once enough users update to the upcoming 1.7 release.
+- @fst\_nml posted a [progress](https://twitter.com/fst_nml/status/1474951827812585472) update on Decred+THORChain integration with first successful DCR swaps against BCH and RUNE on a privatenet. There is a detailed [dev log](https://github.com/alexdcox/thorchain-decred-work-log) of the work and challenges.
 
 
 ## People
@@ -325,6 +284,8 @@ Community stats as of {date}:
 ## Governance
 
 In December the new [treasury](https://dcrdata.decred.org/treasury) received 10,252 DCR worth $816K at December's average rate of $79.59. 1,006 DCR was spent to pay contractors, worth $80K at December's rate, or $109K at November's billing rate of $108.13. As of Jan 6, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 753,934 DCR (47.8 million USD at $63.37).
+
+{ first tspend https://twitter.com/decredproject/status/1472050886830702597 }
 
 The [proposal](https://proposals.decred.org/record/427e1d4) to change the block reward distribution was approved by Politeia vote with 91.7% approval and turnout of 79% - an issue on the final day's voting meant that late votes could not be submitted or counted, but the result was so one-sided this could not have affected the outcome.
 
