Dev feedback from davecgh

--- a/journal/202112.md
+++ b/journal/202112.md
@@ -54,10 +54,8 @@ The new `primitives` package has been kickstarted with initial [proof-of-work](h
 
 Other merged changes:
 
-- introduced [`AssumeValid`](https://github.com/decred/dcrd/pull/2839) parameter and config option to skip certain validation checks prior to the specified block (which is assumed valid). Compared to using checkpoints for same purpose, `AssumeValid` allows to skip more validation work and gives greater flexibility to node operators and developers (for testing).
+- introduced [`AssumeValid`](https://github.com/decred/dcrd/pull/2839) parameter and config option to skip certain validation checks prior to the specified block (which is assumed valid). Compared to using checkpoints for same purpose, `AssumeValid` allows skipping more validation work and gives greater flexibility to node operators and developers (for testing).
 - added an additional child key [derivation](https://github.com/decred/dcrd/pull/2845) method that strictly conforms to the [BIP-32](https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki) standard, to be used by DCRDEX. Decred's current method differs from the standard for legacy reasons.
-- fixed logic for preventing unnecessary [reorgs](https://github.com/decred/dcrd/pull/2840)
-- fixed a bug in CPU [mining](https://github.com/decred/dcrd/pull/2838) (used in simnet testing)
 
 Maintenance, refactoring and cleanup:
 
@@ -65,8 +63,6 @@ Maintenance, refactoring and cleanup:
 - initial work to refactor [peer banning](https://github.com/decred/dcrd/pull/2554) and ban score tracking into a `banmanager` package
 - changed RPC server to [submit](https://github.com/decred/dcrd/pull/2835) transactions directly now that piping it through `netsync` is no longer needed
 - updated module dependencies for the upcoming release
-
-{ sanity check: [#2753](https://github.com/decred/dcrd/pull/2753) would trigger the hard fork vote for DCP0010 too right? }
 
 <a id="dcrwallet" />
 
@@ -472,6 +468,6 @@ Most information from third parties is relayed directly from the source after a 
 Credits (alphabetical order):
 
 - writing and editing: {}
-- reviews and feedback: {}
+- reviews and feedback: davecgh
 - title image: {}
 - funding: Decred stakeholders
