People SM stats

--- a/journal/202112.md
+++ b/journal/202112.md
@@ -259,15 +259,15 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 
 { interviews about people. link to #media for generic references ("3 interviews") and link directly for specific references and/or with quotes }
 
-Community stats as of {date}:
+Community stats as of Jan 2:
 
 - Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
+- [Twitter](https://twitter.com/decredproject) followers: 50,916 (+800)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 12,488 (+82)
+- [Matrix](https://chat.decred.org/) #general users: 599 (+14)
+- [Discord](https://discord.gg/GJ2GXfz) users: 2,175 (-48)
+- [Telegram](https://t.me/Decred) users: 3,160 (+130)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,640 (+20), views: 200K (+2K)
 
 { maybe list/link notable SM activity }
 
