--- a/journal/202112.md
+++ b/journal/202112.md
@@ -280,25 +280,25 @@ See Politeia Digest [issue 50](https://blockcommons.red/politeia-digest/issue050
 
 { section hint: use the same `zoom` parameter for all dcrdata links }
 
-**Hashrate**: December's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: December's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kwlns8ia-kxwxs928&scale=linear&bin=block&axis=time) opened at ~430 Ph/s and closed ~380 Ph/s, bottoming at 247 Ph/s and peaking at 535 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jan 2: Poolin 47%, AntPool 26%, F2Pool 10%, ViaBTC 7%, Luxor 6%, BTC.com 3%, OKEx 0.3%, CoinMine 0.1%. Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before Jan 2 closely matched the reported numbers.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}.
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=kwlns8ia-kxwxs928&axis=time&visibility=true-true&mode=stepped) varied between 191.9-233.3 DCR, with 30-day [average](https://dcrstats.com/) at 214.7 DCR (+11.1).
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom={t1}-{t2}&axis=time&visibility=true-true&mode=stepped) varied between {n.n}-{n.n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}). { use same t1-t2 for zoom }
-
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) in proof-of-stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kwlns8ia-kxwxs928&scale=linear&bin=block&axis=time) was 8.07-8.60 million DCR, meaning that 59.2-62.7% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kwlns8ia-kxwxs928&scale=linear&bin=block&axis=time) in proof-of-stake.
 
 { recap of ticket price action if it was interesting }
 
-**VSP**: On {}, {} (+{}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and {} (-{}) by listed legacy dcrstakepool servers. Collectively the {} legacy and {} new VSPs managed {}% of the ticket pool.
+**VSP**: On Jan 2, ~6,550 (-250) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 171 (-28) by listed legacy dcrstakepool servers. Collectively the 7 legacy and 15 new VSPs managed 16.7% (-0.8%) of the ticket pool. The 3 unlisted but still active legacy VSPs managed 39 (-6) live tickets.
 
-**Nodes**: Throughout December there were around {n} reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
+{ vsp % trending down since... }
 
-Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) ({} total, dcrd only): { vX.Y.Z - n%, ... }
+**Nodes**: Throughout December there were around 180 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
+
+Node versions as of Jan 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (216 total, dcrd only):  v1.6.2 - 62%, v1.7 dev builds - 13%, v1.6.0 - 10%, v1.6.1 - 8%, v1.6 dev builds - 3%, v1.5.2 - 2.3%, v1.5.1 - 1.4%.
 
 { maybe } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
 
