--- a/journal/202112.md
+++ b/journal/202112.md
@@ -299,15 +299,7 @@ The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&z
 
 ## Ecosystem
 
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best }
-
-{ check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
-
-{ check https://github.com/decred/dcrwebapi/pulls for new VSPs }
-
-{ check #services for news }
-
-{ check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
+[Bybit](https://www.bybit.com/) has [tweeted](https://twitter.com/Bybit_Official/status/1471419840263081986) that DCR/USDT trading is live. The exchange is based in Singapore.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
