--- a/journal/202112.md
+++ b/journal/202112.md
@@ -39,7 +39,7 @@ All help to make the final release bug-free and polished is greatly appreciated.
 
 ## Vote on Treasury Spends
 
-Starting with the [payment](#governance) for November work, payments to contractors will be made from the new treasury following the decentralized voting process.
+Starting with the [payment](#governance) for November work, payments to contractors will from now on be made from the new treasury following the decentralized voting process.
 
 If you use the command-line tools to solo vote please set your preference in the following manner:
 
@@ -152,8 +152,8 @@ politeiavoter command-line app:
 
 Backend changes:
 
-- allow to retreive all [comment votes](https://github.com/decred/politeia/pull/1598) without specifying the user ID filter (this was requested to better analyze the proposal process)
-- added a [cache](https://github.com/decred/politeia/pull/1586) for proposal statuses to speed up loading of approved proposals
+- allow to retrieve all [comment votes](https://github.com/decred/politeia/pull/1598) without specifying the user ID filter (this was requested to better analyze the proposal process)
+- added a [cache](https://github.com/decred/politeia/pull/1586) for proposal status to speed up loading of approved proposals
 - execute batch reads [concurrently](https://github.com/decred/politeia/pull/1584) to improve performance
 - converted route [page sizes](https://github.com/decred/politeia/pull/1604) to plugin settings to remove duplication and make it easily configurable by a sysadmin
 - ensure consistent [ordering](https://github.com/decred/politeia/pull/1607) of returned records
@@ -279,7 +279,7 @@ Decred's first spend from the new treasury was approved by a decentralized vote!
 
 On Dec 18 the [transaction](https://dcrdata.decred.org/tx/f57f2f35abcfc58cb8d45da6315982610203c1335ee0d68b36240f22c24a557a) paying 1,006 DCR to contractors was broadcast to the network along an [announcement](https://twitter.com.com/decredproject/status/1472050886830702597) with instructions how to vote and verify the treasury key. The vote started on late Dec 18 and finished on Dec 28 when the transaction was mined in block [619,776](https://dcrdata.decred.org/block/619776). Out of 17,280 max eligible tickets, 6,269 had voted Yes and 0 had voted No by Dec 28, which created an insurmountable tally of Yes votes and triggered the "short-circuit" system to finish the vote 2 days sooner than the maximum 12 days. This algorithm allowed to make the decision faster and pay the contractors earlier.
 
-Back in June, the first attempt to pay from the new treasury has failed due to [a bug](202106.md#new-treasury-bug) making the safety system too aggressive and blocking the payment. That voting was still notable for [showing](202106.md#governance) an impressive 69% ticket participation and 100% support. Since then the contractors have been paid from the legacy treasury, but recently the unintended limit of 0.15 DCR has ended and it allowed to start making full payments from the new treasury. A consensus change was [developed](https://github.com/decred/dcps/blob/master/dcp-0007/dcp-0007.mediawiki) to correct the behavior and prevent this scenario in the future, voting to activate it will start when enough users upgrade to the upcoming v1.7 release.
+Back in June, the first attempt to pay from the new treasury failed due to [a bug](202106.md#new-treasury-bug) making the safety system too aggressive and blocking the payment. That voting was still notable for [showing](202106.md#governance) an impressive 69% ticket participation and 100% support. Since then the contractors have been paid from the legacy treasury, but recently the unintended limit of 0.15 DCR has ended and it allowed to start making full payments from the new treasury. A consensus change was [developed](https://github.com/decred/dcps/blob/master/dcp-0007/dcp-0007.mediawiki) to correct the behavior and prevent this scenario in the future, voting to activate it will start when enough users upgrade to the upcoming v1.7 release.
 
 On Politeia, voting on the block reward change [proposal](https://proposals.decred.org/record/427e1d4) exposed a bug that prevented some late votes from being counted. It started on Dec 9 18:36 UTC when the highest ever voter participation rate surpassed 32,767 votes (78% of all eligible tickets) and hit an unintended internal limit. In the remaining ~25 hours of voting, clients were unable to cast their votes or start new vote trickling processes with politeiavoter (trickling that had started prior to the last ~25 hours could still continue). Importantly, the bug could not have changed the vote outcome, e.g. even if 8,752 remaining eligible tickets all voted No it would still pass with 79% Yes. The fix was included and deployed with v1.3.1, see [#1605](https://github.com/decred/politeia/pull/1605) for technical details. This bug only related to the Politeia vote, it does not affect the consensus vote that will be triggered by the release of v1.7.0.
 
