--- a/journal/202112.md
+++ b/journal/202112.md
@@ -4,18 +4,16 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-December's highlights: {
+December's highlights:
 
-- Decred's first payment to contractors from the new treasury was approved by a decentralized vote and sent
-- Development work on DCP10 (Change PoW/PoS Subsidy Split To 10/80) was completed
-- Politeia v1.3.1 bugfix and polishing release was deployed
-- The first release candidates for v1.7 were opened for testing in early Jan
-- A proposal for funding of DEX phase 3 was published in early Jan
-- {staked DCR, staked %, mixed % all-time highs - drop if one more bullet is not needed}
+- Decred's first payment to contractors from the new treasury was approved by a decentralized vote and sent.
+- Development work on DCP-10 (Change PoW/PoS Subsidy Split To 10/80) was completed.
+- Politeia v1.3.1 bugfix and polishing release was deployed.
+- The first release candidates for v1.7 were opened for testing in early Jan.
+- A proposal for funding the third phase of DCRDEX development was published in early Jan.
+- New participation records have been set in proposal voting, staking, and mixing systems.
 
-}
-
-Contents: { sync }
+Contents:
 
 - [v1.7 Release Testing](#v17-release-testing)
 - [Vote on Treasury Spends](#vote-on-treasury-spends)
@@ -221,8 +219,6 @@ Check the new development [proposal](https://proposals.decred.org/record/3326c82
 - notify the user when the [storage space](https://github.com/planetdecred/dcrios/pull/881) is low
 - consistently use term ["seed words"](https://github.com/planetdecred/dcrios/pull/878)
 
-{ image candidates: 873 881 }
-
 <a id="godcr" />
 
 **[GoDCR](https://github.com/planetdecred/godcr)**
@@ -240,8 +236,6 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (
 - added DEX client features to the [MultiWallet](https://github.com/planetdecred/dcrlibwallet/pull/212) manager
 
 Progress towards the v1.0 release can be tracked [here](https://github.com/planetdecred/godcr/milestone/2).
-
-{ image candidates: 712? }
 
 <a id="dcrdata" />
 
