use title image

--- a/journal/202112.md
+++ b/journal/202112.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – December 2021
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![abstract art by @saender](../img/202112.1.github.png)
 
-_Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
+_Image: Nodetropolis by @saender_
 
 December's highlights:
 
@@ -384,5 +384,5 @@ Credits (alphabetical order):
 
 - writing and editing: bee, bochinchero, degeri, l1ndseymm, richardred
 - reviews and feedback: davecgh, lukebp
-- title image: {}
+- title image: saender
 - funding: Decred stakeholders
