--- a/journal/202112.md
+++ b/journal/202112.md
@@ -296,6 +296,10 @@ Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by th
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kwlns8ia-kxwxs928&scale=linear&bin=block&axis=time) was 8.07-8.60 million DCR, meaning that 59.2-62.7% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kwlns8ia-kxwxs928&scale=linear&bin=block&axis=time) in proof-of-stake. Both absolute and percentage values made new all-time highs.
 
+![stake participation](../img/202112.2.github.png)
+
+_What has been staked... Cannot be unstaked_
+
 **VSP**: On Jan 2, ~6,550 (-250) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 171 (-28) by listed legacy dcrstakepool servers. Collectively the 7 legacy and 15 new VSPs managed 16.7% (-0.8%) of the ticket pool. The 3 unlisted but still active legacy VSPs managed 39 (-6) live tickets.
 
 The count of VSP-managed tickets has been trending down since at least June 2021 when this observation started at ~9,300 tickets (22.7% of the ticket pool).
@@ -306,7 +310,9 @@ Node versions as of Jan 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (2
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q3lq8-l0s732o6&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 54.4-56.9% and set a new all-time high with the sum of mixed unspent coins above 7.8 million.
 
-{ add a few most interesting charts from @bochinchero }
+Year 2021 had the highest transaction volume:
+
+![monthly tx volume](../img/202112.3.github.png)
 
 
 ## Ecosystem
@@ -354,7 +360,7 @@ Translations:
 
 In December DCR was trading between USD 60.05-110.95 / BTC 0.00129-0.00234. The average daily rate was $79.59.
 
-{ maybe a chart here }
+![DCRDEX monthly trading volume](../img/202112.4.github.png)
 
 
 ## Relevant External
