tweak intro again

--- a/journal/202112.md
+++ b/journal/202112.md
@@ -7,11 +7,11 @@ _Image: Nodetropolis by @saender_
 December's highlights:
 
 - Decred's first payment to contractors from the new treasury was approved by a decentralized vote and sent.
-- Development work on DCP-10 (Change PoW/PoS Subsidy Split To 10/80) was completed.
+- Development work for the DCP-10 consensus change was completed. It will change the PoW/PoS reward split from 60%/30% to 10%/80%.
 - Politeia v1.3.1 bugfix and polishing release was deployed.
+- New participation records have been set in proposal voting, staking, and mixing systems.
 - The first release candidates for v1.7 were opened for testing in early Jan.
 - A proposal for funding the third phase of DCRDEX development was published in early Jan.
-- New participation records have been set in proposal voting, staking, and mixing systems.
 
 Contents:
 
